--- a/BlueTelecom/BlueCube3.html
+++ b/BlueTelecom/BlueCube3.html
@@ -807,7 +807,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i181.button.html:button/html-->
-<button id="i181">Más Información</button>
+<button id="i181">¡Conéctate ya!</button>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -821,7 +821,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i185.button.html:button/html-->
-<button id="i185">Más Información</button>
+<button id="i185">¡Conéctate ya!</button>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -835,7 +835,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i189.button.html:button/html-->
-<button id="i189">Más Información</button>
+<button id="i189">¡Conéctate ya!</button>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -997,7 +997,7 @@ name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i181.button.meta:button/meta*/
-name: Más Información;
+name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -1021,7 +1021,7 @@ name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i185.button.meta:button/meta*/
-name: Más Información;
+name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i185.i186.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -1045,7 +1045,7 @@ name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i189.button.meta:button/meta*/
-name: Más Información;
+name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i189.i190.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
