--- a/BlueTelecom/BlueCube4.html
+++ b/BlueTelecom/BlueCube4.html
@@ -805,7 +805,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/S6PlFF9.png"/>
 <!--#/#--><!--#i4.i181.button.html:button/html-->
-<button id="i181">Más Información</button>
+<button id="i181">¡Conéctate ya!</button>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -819,7 +819,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/srNIvr0.png"/>
 <!--#/#--><!--#i5.i185.button.html:button/html-->
-<button id="i185">Más Información</button>
+<button id="i185">¡Conéctate ya!</button>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -833,7 +833,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/2yLKSjd.png"/>
 <!--#/#--><!--#i6.i189.button.html:button/html-->
-<button id="i189">Más Información</button>
+<button id="i189">¡Conéctate ya!</button>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -993,7 +993,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.button.meta:button/meta*/
-name: Más Información;
+name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -1017,7 +1017,7 @@ customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i185.button.meta:button/meta*/
-name: Más Información;
+name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i185.i186.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -1041,7 +1041,7 @@ customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i189.button.meta:button/meta*/
-name: Más Información;
+name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i189.i190.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
