Actualizar link de slide de blue telecom

--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -251,7 +251,7 @@
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> <img src="https://i.imgur.com/d0eO4QE.png" alt="" /> <img src="https://i.imgur.com/dHjZ5Eq.png" alt="" /> <img src="https://i.imgur.com/drdaQYq.png" alt="" /> </div>
-                <div class="te-cover"> <img src="hhttps://i.imgur.com/pwajl4B.png" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/BAUiiP8.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
