--- a/7eleven/fade.html
+++ b/7eleven/fade.html
@@ -54,14 +54,15 @@
         }
 
         .fade1_cover {
-            position: relative;
+            position:fixed;
             width: 100%;
-            height: 55%;
+            height: 25%;
         }
 
         .bg.cover-1 {
             background: url("https://i.imgur.com/oL2dMjB.png");
             background-size: cover;
+            
         }
 
         .bg.cover-2 {
@@ -129,7 +130,7 @@
 
         .fade1_text {
             position: absolute;
-            top: 54%;
+            top: 35%;
             left: 7.5px;
             width: 99%;
             padding: 0.3em;
