correccion clicktag mustela

--- a/Mustela/slider.html
+++ b/Mustela/slider.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://rocatileusa.com/';
+                adfClickTAGUrl = 'https://www.mustela.com.mx/content/Ingredientes-de-Mustela';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
