detalles fadebig trescielos

--- a/Tres Cielos/fadebig.html
+++ b/Tres Cielos/fadebig.html
@@ -56,7 +56,7 @@
         .trescielos_cover {
             position:fixed;
             width: 100%;
-            height: 57%;
+            height: 53%;
         }
 
         .bg.cover-1 {
@@ -83,7 +83,7 @@
         .trescielos_cover .trescielos_logo {
             position: absolute;
             bottom: -15px;
-            width:105px;
+            width:68px;
             line-height: 1.3em;
             z-index: 2;
             margin-left: 40%;
@@ -132,7 +132,7 @@
 
         .trescielos_text {
             position: absolute;
-            top: 55%;
+            top: 51.5%;
             left: 7.5px;
             width: 99%;
             padding: 0.3em;
@@ -141,13 +141,13 @@
         }
 
         .trescielos_text_title {
-            font-size: 140%;
+            font-size: 160%;
             color: #000000;
             display: inline-block;
             width: 94%;
-            margin-bottom: -40px;
+            margin-bottom: -50px;
             margin-top: 28px;
-            text-align: center;
+            text-align: left;
             margin-left: -5px;
             line-height: 1.05em
         }
@@ -316,7 +316,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -45px;
+            margin-top: -30px;
             margin-right: -5px;
         }
         
