detalles texto fadebig trescielos

--- a/Tres Cielos/fadebig.html
+++ b/Tres Cielos/fadebig.html
@@ -86,7 +86,7 @@
             width:68px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 40%;
+            margin-left: 47%;
             left: -30px;
             background-color: #2FA58F;
             padding: 5px;
@@ -142,7 +142,7 @@
 
         .trescielos_text_title {
             font-size: 160%;
-            color: #000000;
+            color: #453936;
             display: inline-block;
             width: 94%;
             margin-bottom: -50px;
@@ -316,7 +316,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -30px;
+            margin-top: -18px;
             margin-right: -5px;
         }
         
@@ -349,7 +349,7 @@
             <br/>  
             <span class="trescielos_text_light trescielos_text_small" style="color:black;">
                 <p style="margin-right:px; text-align: justify; width: 90%; margin-top: 10px; line-height: 1.2em">
-   <strong>Este sábado 30 de junio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:20px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:5px;">Jardín Tres Cielos, Tequesquitengo, Morelos,</p> <p style="margin-top:40px;"> <strong>¡A 90 minutos de CDMX!</strong>
+   <strong>Este domingo 22 de julio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:20px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:5px;">Jardín Tres Cielos, Tequesquitengo, Morelos,</p> <p style="margin-top:40px;"> <strong>¡A 90 minutos de CDMX!</strong>
 
                 </p> 
                 
