borde fadebig trescielos

--- a/Tres Cielos/fadebig.html
+++ b/Tres Cielos/fadebig.html
@@ -320,7 +320,11 @@
             margin-right: -5px;
         }
         
-        
+        .border{
+border: 1px solid #c5c5c5;
+padding-left:0px;
+padding-top:0px;
+}
 
     </style>
     <script>
