cambio de fecha

--- a/Tres Cielos/fade.html
+++ b/Tres Cielos/fade.html
@@ -374,7 +374,7 @@
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p style="margin-right:11px;">
                     ¿Planeas casarte?
-                    Este 30 de junio, asiste a nuestro showroom y conoce el lugar para la boda de tus sueños<br>
+                    Este domingo 22 de julio, asiste a nuestro showroom y conoce el lugar para la boda de tus sueños<br>
                     -Coctel <br>
                     -Recorridos<br>
                     -Degustaciones<br>
