--- a/Tres Cielos/videobig.html
+++ b/Tres Cielos/videobig.html
@@ -264,7 +264,7 @@
                ¿Planeas casarte?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 5px;"> <strong>Este sábado 30 de junio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:10px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:2px;">Jardín Tres Cielos, Tequesquitengo, Morelos,</p> <p style="margin-top:-3px;"> <strong>¡A 90 minutos de CDMX!</strong></p>
+                <p style="margin-top: 5px;"> <strong>Este domingo 22 de julio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:10px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:2px;">Jardín Tres Cielos, Tequesquitengo, Morelos,</p> <p style="margin-top:-3px;"> <strong>¡A 90 minutos de CDMX!</strong></p>
             </span>
 
             
