--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -222,12 +222,12 @@
         
         .cta {
 
-            position: fixed;
+            position: absolute;
             top: 215px;
             width: 90px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 75%;
+            margin-left: 59%;
             left: -40px;
             background-color: #13375A;
             padding: 5px;
