--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -222,7 +222,7 @@
         
         .cta {
 
-            position: absolute;
+            position:fixed;
             top: 215px;
             width: 90px;
             line-height: 1.3em;
