corrección titulos 7elven

--- a/7eleven/fade.html
+++ b/7eleven/fade.html
@@ -340,7 +340,7 @@
         </div>
         <div class="eleven_text"> 
             <span class="eleven_text_title eleven_text_bold">
-             Nunca habéis visto tantas ventajas en un App
+             Nunca has visto tantas ventajas en una App
             </span>
             <br/>  
             <span class="eleven_text_light eleven_text_small" style="color:black;">
