--- a/7eleven/slider.html
+++ b/7eleven/slider.html
@@ -250,7 +250,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:-5px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#606060; font-size:17px; text-align:left;">¿Quieres un relleno de café gratis los lunes?</span> <img class="logo" src="https://i.imgur.com/XIwXPK7.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#606060; font-size:17px; text-align:left;">-¿Quieres un refill de café gratis los lunes?</span> <img class="logo" src="https://i.imgur.com/XIwXPK7.png" alt=""> </div>
                 </div>
                 
       
