--- a/7eleven/slider.html
+++ b/7eleven/slider.html
@@ -70,7 +70,7 @@
         .AmericanSlide .bzm_text {
             margin-top: 20px;
             margin-left: 5px;
-            text-align: left;
+            text-align: center;
             margin-bottom: 
         }
 
@@ -250,7 +250,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:-5px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#606060; font-size:17px; text-align:left;">-¿Quieres un refill de café gratis los lunes?</span> <img class="logo" src="https://i.imgur.com/XIwXPK7.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#606060; font-size:18px; text-align:left;">¿Quieres un refill de café gratis los lunes?</span> <img class="logo" src="https://i.imgur.com/XIwXPK7.png" alt=""> </div>
                 </div>
                 
       
