--- a/BlueTelecom/blueSlide6.html
+++ b/BlueTelecom/blueSlide6.html
@@ -223,12 +223,12 @@
         
         .cta {
             
-            position: absolute;
-            top: 215px;
+            position: fixed;
+            top: 210px;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 60%;
+            margin-left: 55%;
             left: -30px;
             background-color: #13375A;
             padding: 5px;
@@ -255,7 +255,7 @@
                 </div>
                 <div style="margin-top:12px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:22px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:21px; margin-top: -8px;">
 						    Prueba una conexión hecha a tu medida
 						</span>
                     </div>
