--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -224,12 +224,12 @@
         .cta {
 
                     
-            position: absolute;
-            top: 215px;
+            position: fixed;
+            top: 211px;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 60%;
+            margin-left: 55%;
             left: -30px;
             background-color: #13375A;
             padding: 5px;
