Correccion banners grandes de blue telecom

--- a/BlueTelecom/fade.html
+++ b/BlueTelecom/fade.html
@@ -79,12 +79,12 @@
 
         .bluefade_cover .bluefade_logo {
             position: absolute;
-            bottom: -15px;
+            bottom: -210px;
             width:120px;
             line-height: 1.3em;
-            z-index: 2;
-            margin-left: 35%;
-            left: -30px;
+            z-index: 5;
+            margin-left: 55%;
+           
             background-color: #3399FE;
             padding: 5px;
             border-radius: 20px;
@@ -129,7 +129,7 @@
 
         .bluefade_text {
             position: absolute;
-            top: 54%;
+            top: 50%;
             left: 7.5px;
             width: 98%;
             padding: 0.3em;
@@ -162,7 +162,7 @@
         }
 
         .bluefade_text_small {
-            font-size: 97%;
+            font-size: 94%;
         }
 
         ul {
@@ -310,11 +310,12 @@
          .logo {
             width: 41%;
             z-index: 2;
-            float: right;
+            float: left;
             height: 30px;
             text-align: center;
-            margin-top: -45px;
-            margin-right: 20px;
+            margin-top: -9px;
+            margin-left: -10px; 
+           
         }
 
     </style>
@@ -343,7 +344,7 @@
             </span>
             <br/>  
             <span class="bluefade_text_light bluefade_text_small" style="color:black;">
-                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
+                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 7px; line-height: 1.2em">
                     Ahora la vida es más fácil. <br>
 
 Hoy existe  <strong>Blue Telecomm Inalámbrico </strong>para tu hogar.<br> 
