--- a/BlueTelecom/slider-2.html
+++ b/BlueTelecom/slider-2.html
@@ -33,12 +33,12 @@
         
            .tgx_logo {
             position: absolute;
-            top:282px;
+            top:74%;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48%;
-            left: -30px;
+            margin-left: 48.5%;
+            left: 70px;
             background-color: #3399FE;
             font-family: 'Lato', sans-serif;
             padding: 5px;
@@ -204,7 +204,7 @@
         .Blue .logo {
             background-color: #ffffff;
             border-radius: 4px;
-            float: right;
+            float: left;
             height: 30px;
             text-align: center;
             margin-top: 15px;
