--- a/BlueTelecom/video-2.html
+++ b/BlueTelecom/video-2.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 59%;
+            top: 54%;
             left: 5px;
             width: 88%;
             padding: 0.3em;
@@ -181,20 +181,20 @@
         .logo {
             width: 41%;
             z-index: 2;
-            float: right;
+            float: left;
             height: 30px;
             text-align: center;
-            margin-top: -4px;
+            margin-top: 10px;
             margin-right: -15px;
         }
         
         .tgx_cover .tgx_logo {
             position: absolute;
-            bottom: -15px;
+            bottom: -287px;
             width: 90px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 45%;
+            margin-left: 71%;
             left: -30px;
             background-color: #317cf5;
             padding: 5px;
@@ -271,7 +271,7 @@
                 Internet sin tantos rollos para tu casa
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 1px; font-size: 18px; margin-left: 10px; width: 99%; line-height: 1.4em;"> Navega sin cables y sin instalaciones <strong>Blue Telecomm Inalámbrico</strong> para tu hogar es el Internet como te gusta: Simple. </p> 
+                <p style="margin-top: 10px; font-size: 18px; margin-left: 10px; width: 99%; line-height: 1.4em;"> Navega sin cables y sin instalaciones <strong>Blue Telecomm Inalámbrico</strong> para tu hogar es el Internet como te gusta: Simple. </p> 
             </span>
 
             
