--- a/BlueTelecom/slider-2.html
+++ b/BlueTelecom/slider-2.html
@@ -32,13 +32,13 @@
         }
         
            .tgx_logo {
-            position: absolute;
+            position: fixed;
             top:74%;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48.5%;
-            left: 70px;
+            margin-left: 13%;
+            
             background-color: #3399FE;
             font-family: 'Lato', sans-serif;
             padding: 5px;
