--- a/BlueTelecom/slider-2.html
+++ b/BlueTelecom/slider-2.html
@@ -33,11 +33,11 @@
         
            .tgx_logo {
             position:absolute;
-            top:74%;
+            margin-top: 560px;
             width: 80px;
             line-height: 1.3em;
-            z-index: 2;
-            margin-left: 13%;
+            z-index: 5;
+            margin-left: 190px;
             
             background-color: #3399FE;
             font-family: 'Lato', sans-serif;
@@ -260,7 +260,6 @@ Sin cables y sin instaladores<br>
             </div>
         </a>
     </div>
-
     <script>
         var Blue = (function() {
             //funcionamiento del script
