corrección de clicktag cubos blue telecom

--- a/BlueTelecom/BlueCube3.html
+++ b/BlueTelecom/BlueCube3.html
@@ -521,18 +521,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-10px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-10px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 58%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i4.i181.button.css:button/base/css*/
 #i181 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(9,81,117,1); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i181:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
@@ -543,6 +531,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
         transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
@@ -703,6 +703,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-6px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-6px, 0px) rotate(0deg);
 }
+/*#/#*//*#i5.i193.button.css:button/base/css*/
+#i193 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(9,81,117,1); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i193:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i193:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i193.i196.positioning.css:positioning/base/css.1*/
+#i193 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 85px; height: 24px;
+        -ms-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
+        transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -714,17 +725,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i193.button.css:button/base/css*/
-#i193 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(9,81,117,1); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i193:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i193:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i193.i196.positioning.css:positioning/base/css.1*/
-#i193 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 85px; height: 24px;
-        -ms-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
-        transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -756,18 +756,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-11px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-11px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i99.shape.css:shape/base/css*/
-#i99 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i99 { cursor: pointer; }
-/*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
-#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i6.i197.button.css:button/base/css*/
 #i197 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(9,81,117,1); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i197:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
@@ -778,6 +766,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
         transform: translate(0, 0) translate(211px, 222px) rotate(0deg);
+}
+/*#/#*//*#i6.i99.shape.css:shape/base/css*/
+#i99 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
+#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
@@ -804,10 +802,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i14">Conéctate a Internet como te gusta: Simple</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/hqDYm5k.png"/>
-<!--#/#--><!--#i4.i91.shape.html:shape/html-->
-<div id="i91"></div>
 <!--#/#--><!--#i4.i181.button.html:button/html-->
 <button id="i181">¡Conéctate ya!</button>
+<!--#/#--><!--#i4.i91.shape.html:shape/html-->
+<div id="i91"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -818,10 +816,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i24">Internet sin tantos rollos para tu casa</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/zvLvm8q.png"/>
-<!--#/#--><!--#i5.i95.shape.html:shape/html-->
-<div id="i95"></div>
 <!--#/#--><!--#i5.i193.button.html:button/html-->
 <button id="i193">¡Conéctate ya!</button>
+<!--#/#--><!--#i5.i95.shape.html:shape/html-->
+<div id="i95"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -832,10 +830,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i34">Contrata Internet sin cables, sin complicaciones</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/iPMocgd.png"/>
-<!--#/#--><!--#i6.i99.shape.html:shape/html-->
-<div id="i99"></div>
 <!--#/#--><!--#i6.i197.button.html:button/html-->
 <button id="i197">¡Conéctate ya!</button>
+<!--#/#--><!--#i6.i99.shape.html:shape/html-->
+<div id="i99"></div>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -881,74 +879,33 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i181.i183.actions.js:actions/base/js*/
-/* Name: On Click; */
-var el = document.getElementById('i181');
-
-el.addEventListener('click', function(e){
-    /*#i183.i184.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i193.i194.actions.js:actions/base/js*/
-/* Name: On Click; */
-var el = document.getElementById('i193');
-
-el.addEventListener('click', function(e){
-    /*#i194.i195.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i99.i179.actions.js:actions/base/js*/
+/*#/#*//*#i99.i201.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i99').addEventListener('click', function(e){
-    /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i197.i198.actions.js:actions/base/js*/
-/* Name: On Click; */
-var el = document.getElementById('i197');
+var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
-    /*#i198.i199.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i201.i202.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -957,11 +914,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*/
 
   function next(){
@@ -992,14 +945,14 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i91.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i181.button.meta:button/meta*/
 name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i91.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
@@ -1016,14 +969,14 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i95.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i193.button.meta:button/meta*/
 name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i193.i196.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i95.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
@@ -1040,14 +993,14 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i99.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i197.button.meta:button/meta*/
 name: ¡Conéctate ya!;
 customName: false;
 /*#/#*//*#i197.i200.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i99.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
