--- a/HistoryChannel/video.html
+++ b/HistoryChannel/video.html
@@ -24,8 +24,8 @@
 		.HistoryChannel .bzm_pos_bl{bottom:3%;left:3%}
 		.HistoryChannel .bzm_pos_br{bottom:3%;right:3%}
 		.HistoryChannel .bzm_pos_bm{bottom:3%;left:calc(100% - 70%)}
-		.HistoryChannel .bzm_text{padding:6px 0 10px .3em;line-height:1.1;color:#000; margin-left:5px;}
-		.HistoryChannel .bzm_text_title{font-size:14px;color:#000;}
+		.HistoryChannel .bzm_text{padding:6px 0 10px .3em;line-height:1.1;color:#000; margin-left:8px;margin-right: 15;}
+		.HistoryChannel .bzm_text_title{font-size:16px;color:#000;}
 		.HistoryChannel .bzm_text_light{font-size:10px;font-weight:0}
 		.HistoryChannel .bzm_text_medium{font-size:15px;font-weight:500;line-height:1.4}
 		.HistoryChannel .bzm_text_bold{font-size:18px;font-weight:700;line-height:1;}
@@ -39,15 +39,28 @@
 		.HistoryChannel #botones-para-compartir { text-align:right;}.likedini:hover, .facebooki:hover, .twitteri:hover, .googlei:hover,.pinteresti:hover {border-radius:25px 25px 25px 25px;transition:all .3s ease-out;box-shadow: 0px 0px 5px #000; /* Sombra */-moz-transition: all .5s;-webkit-transition: all .5s;-o-transition: all .5s;}.likedini, .facebooki, .twitteri, .googlei, .pinteresti {transition:all .3s ease-out;-moz-transition: all .5s;-webkit-transition: all .5s;-o-transition: all .5s;}
 
 		.HistoryChannel .logo {
-        width: 41%;
+        width: 50%;
 		z-index: 2;
 		float: right;
 		height: 30px;
 		text-align: center;
-		margin-top: 10px;
-		margin-right: -15px
+		margin-top: 1px;
+		margin-right: -50px
 			}
 
+         .cta {
+            position: absolute;
+            top: 140px;
+            width: 80px;
+            line-height: 1.3em;
+            z-index: 5;
+            margin-left: 48%;
+            left: -30px;
+            background-color: #2FA58F;
+            padding: 5px;
+            border-radius: 20px;
+            text-align: center;
+        }
 	 </style>
 </head>
 <body class="HistoryChannel" style="margin:0px;">
@@ -68,10 +81,25 @@
 </span>
 				
 			</div>
+        
+         <div style="bottom:0px;height: 1px;text-align:left;margin-top:1%">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:9px;margin-top:2px;">
+                    <span>  
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.forever21.com/MX/Product/Category.aspx?br=f21&category=dress"  target="block">    
+                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a>
+
+                            <a class="shared" href="https://plus.google.com/share?url=http://www.forever21.com/MX/Product/Category.aspx?br=f21&category=dress" target="block">
+                            <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a>
+
+                            <a class="shared" href="https://twitter.com/home?status=http://www.forever21.com/MX/Product/Category.aspx?br=f21&category=dress" target="block">
+                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a>
+                    </span>
+                </div>
+        </div>
 
 			<div style="bottom:0px;height: 1px;text-align:left;margin-top:-10px;">
                 <div class="logo">
-                    <img src="https://i.imgur.com/wvCCVQM.jpg" style="height:30px">
+                    <img src="https://i.imgur.com/oAJM198.png" style="height:30px">
                 </div>
 			</div>
     </a>
