url para video history channel

--- a/HistoryChannel/video.html
+++ b/HistoryChannel/video.html
@@ -42,7 +42,7 @@
         width: 50%;
 		z-index: 2;
 		float: right;
-		height: 30px;
+		height: 40px;
 		text-align: center;
 		margin-top: 1px;
 		margin-right: -50px
@@ -67,7 +67,7 @@
 
 <div class="bzm_wrapper carousel-wrapper size_300x250">
 
-    <a href="https://www.realmadrid.com/area-vip" style="display: block;" target="block">
+    <a href="https://www.history.com/shows/kingpin" style="display: block;" target="block">
 
         <div class="carousel-container">
 			<div style="text-align:center; margin-top:-10px;">
