correcciones texto e imagenes

--- a/CORONA/fade.html
+++ b/CORONA/fade.html
@@ -53,7 +53,7 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/1lqQHbn.png)
+            background-image: url(https://i.imgur.com/CtEMmvz.png)
         }
 
         .corona .bg.cover-2 {
@@ -61,7 +61,7 @@
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/JQZ7IMY.jpg)
+            background-image: url(https://i.imgur.com/jthzfSk.png)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -257,7 +257,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#484949;line-height:1;font-size:23px;text-align:centerñ"> ¡Menos calorías con el mismo sabor refrescante!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#484949;line-height:1;font-size:23px;text-align:centerñ"> ¿Un dia estresante? ¡Entonces, te lo mereces!</span></div>
             <div style="bottom:0px;height:40px;text-align:right ;margin-top:10px; margin-right: 5px;"> <img src="https://i.imgur.com/LDzNR6I.jpg" style="height:39px;margin-top:1px;">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-35px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://cervezacorona.es/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://cervezacorona.es/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/MRUYpOx.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://cervezacorona.es/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
