--- a/CORONA/Cube.html
+++ b/CORONA/Cube.html
@@ -504,7 +504,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 292px; height: 43px;
         -ms-transform: translate(-50%, -50%) translate(2px, 74px) rotate(0deg);
@@ -515,20 +515,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 301px; height: 200px;
-        -ms-transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 327px; height: 172px;
+        -ms-transform: translate(0, 0) translate(-13px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-13px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-13px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-13px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i205.image.css:image/base/css*/
 #i205 { opacity: 1; }
 /*#/#*//*#i205.i206.positioning.css:positioning/base/css.1*/
 #i205 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 50px; height: 37px;
-        -ms-transform: translate(0, 0) translate(240px, 210px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(240px, 210px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(240px, 210px) rotate(0deg);
-        transform: translate(0, 0) translate(240px, 210px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(247px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(247px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(247px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(247px, 210px) rotate(0deg);
 }
 /*#/#*//*#i4.i207.image.css:image/base/css*/
 #i207 { opacity: 1; }
@@ -582,7 +582,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 293px; height: 41px;
         -ms-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
@@ -789,7 +789,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 298px; height: 35px;
         -ms-transform: translate(-50%, -50%) translate(4px, 70px) rotate(0deg);
@@ -800,11 +800,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i203.image.css:image/base/css*/
 #i203 { opacity: 1; }
 /*#/#*//*#i203.i204.positioning.css:positioning/base/css.1*/
-#i203 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 308px; height: 172px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i203 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 322px; height: 171px;
+        -ms-transform: translate(0, 0) translate(-18px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-18px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-18px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-18px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i221.image.css:image/base/css*/
 #i221 { opacity: 1; }
@@ -874,9 +874,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Desconéctate del estrés cotidiano de forma ligera y sin remordimientos.</div>
+<div id="i14">¿Lo has dado todo en el trabajo hoy? ¡Entonces, te lo mereces!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/JQZ7IMY.jpg"/>
+<img id="i130" src="https://i.imgur.com/KTeOhA5.jpg"/>
 <!--#/#--><!--#i4.i205.image.html:image/html-->
 <img id="i205" src="https://i.imgur.com/LDzNR6I.jpg"/>
 <!--#/#--><!--#i4.i207.image.html:image/html-->
@@ -894,7 +894,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Desconéctate del estrés cotidiano de forma ligera y sin remordimientos.</div>
+<div id="i24">¿Lo has dado todo en el trabajo hoy? ¡Entonces, te lo mereces!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/1Nt6CiF.jpg"/>
 <!--#/#--><!--#i5.i213.image.html:image/html-->
@@ -914,9 +914,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Desconéctate del estrés cotidiano de forma ligeray sin remordimientos.</div>
+<div id="i34">¿Lo has dado todo en el trabajo hoy? ¡Entonces, te lo mereces!</div>
 <!--#/#--><!--#i6.i203.image.html:image/html-->
-<img id="i203" src="https://i.imgur.com/14drGUa.jpg"/>
+<img id="i203" src="https://i.imgur.com/CtEMmvz.png"/>
 <!--#/#--><!--#i6.i221.image.html:image/html-->
 <img id="i221" src="https://i.imgur.com/LDzNR6I.jpg"/>
 <!--#/#--><!--#i6.i223.image.html:image/html-->
@@ -1265,7 +1265,7 @@ name: Texto; customName: 1;
 /*#/#*//*#i34.i35.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i203.image.meta:image/meta*/
-name: 14drGUa.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: CtEMmvz.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i203.i204.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
