Links de rrss para story de univ. cyberseguridad

--- a/Univ CyberSeguridad/story-resize.html
+++ b/Univ CyberSeguridad/story-resize.html
@@ -313,16 +313,16 @@
                     <div style="text-align:center; background-color:white; background-size:25px; height:20px; margin-top: -20px; margin-bottom: 30px;margin-left: 80px;">
                     <span>  
                        
-                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.youtube.com/watch?v=asX53aeBPJE"  target="block" >    
+                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://i2labsacademy.com/"  target="block" >    
                             <img alt="Facebook" class="facebooki"  src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="Facebook" />
                         </a>
 
-                         <a class="shared" href="https://twitter.com/home?status=https://www.youtube.com/watch?v=asX53aeBPJE" target="block" >
+                         <a class="shared" href="https://twitter.com/home?status=https://i2labsacademy.com/" target="block" >
                             <img alt="Twitter" class="twitteri"
                              src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="Twitter" />
                         </a>
 
-                      <a class="shared" href="https://plus.google.com/share?url=https://www.youtube.com/watch?v=asX53aeBPJE" target="block" >
+                      <a class="shared" href="https://plus.google.com/share?url=https://i2labsacademy.com/" target="block" >
 								<img alt="compartir en google+" class="googlei" src="http://3.bp.blogspot.com/-Ioy5JWv_nwk/Uh1HlxE8urI/AAAAAAAAAhc/q_uUabDAhsU/s1600/Google%252B%2Balt.png" title="compartir en google+" /></a>
                     </span>
                 </div> 
