--- a/Univ CyberSeguridad/story-uni.html
+++ b/Univ CyberSeguridad/story-uni.html
@@ -267,7 +267,11 @@
         <div class="context">
 
             <div class="bzm_text">
-                <iframe width="320" height="250" src="https://i.imgur.com/6VKfMjV.png" style="margin-bottom: 10px;"> </iframe>
+               <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:20px;">
+                        <a href="https://i2labsacademy.com/" style="display:block; margin-left:-10px;" target="_blank">
+                            <div class="img-news" style="background-image:url(https://i.imgur.com/6VKfMjV.png);"></div>
+                        </a>
+                    </span>
                 <a href="https://i2labsacademy.com/" style="padding-top:15px;" target="_blank">
                     <span class="bzm_text_title  bzm_text_bold" style="color:#000; line-height:1; font-size:21px; margin-top: 10px;">
                         ¿Te atrae la ciberseguridad?
